--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A4 landscape page poster project with TypeScript and Webpack",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve --mode development",
+    "start": "webpack serve --mode development",
     "build": "webpack --mode production"
   },
   "keywords": [
