--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "poster"
   ],
   "devDependencies": {
+    "@types/node": "24.10.4",
     "css-loader": "7.1.2",
     "html-webpack-plugin": "5.6.5",
     "sass": "1.97.1",
