--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -3,53 +3,42 @@ name: Build and Test
 on:
   push:
     branches:
-      - '**'
+      - '*'
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron: '10 10 * * 5'  # every Friday at 10:10
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
     
-    permissions:
-      contents: read
-    
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
       
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v6
         with:
-          node-version: '20'
+          node-version-file: .nvmrc
           cache: 'npm'
-      
+
       - name: Install dependencies
         run: npm ci
-      
-      - name: Build project
-        run: npm run build
-      
       - name: Cache Playwright browsers
-        uses: actions/cache@v4
+        id: playwright-cache
+        uses: actions/cache@v5
         with:
           path: ~/.cache/ms-playwright
-          key: ${{ runner.os }}-playwright-${{ hashFiles('package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-playwright-
-      
+          key: ${{ runner.os }}-playwright-${{ steps.playwright-version.outputs.version }}
       - name: Install Playwright browsers
+        if: steps.playwright-cache.outputs.cache-hit != 'true'
         run: npx playwright install --with-deps chromium firefox
-      
+
+      - name: Build project
+        run: npm run build      
       - name: Run Playwright tests
-        run: npx playwright test
-      
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: test-results/
-          retention-days: 30
-      
+        run: npm test
+
       - name: Upload Playwright report
         if: always()
         uses: actions/upload-artifact@v4
@@ -57,3 +46,18 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v6
+        if: ${{ !cancelled() }}
+        with:
+          name: test-results
+          path: test-results/
+          retention-days: 30
+      - name: Test Report
+        uses: dorny/test-reporter@v2
+        if: ${{ !cancelled() }}
+        with:
+          name: Playwright Tests
+          path: test-results/junit.xml
+          reporter: jest-junit
