--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-node_modules
-dist
+# system files
 .DS_Store
-test-results
-playwright-report
+
+# dependencies
+node_modules
+
+# build outputs
+dist
+/test-results/
+/playwright-report/
