--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "poster"
   ],
   "devDependencies": {
-    "@playwright/test": "^1.57.0",
+    "@playwright/test": "1.57.0",
     "@types/node": "24.10.4",
     "css-loader": "7.1.2",
     "html-webpack-plugin": "5.6.5",
-    "http-server": "^14.1.1",
+    "http-server": "14.1.1",
     "sass": "1.97.1",
     "sass-loader": "16.0.6",
     "style-loader": "4.0.0",
