--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"],
   "ts-node": {
+    // for development tools like configuration and Playwright
+    // so that they are understood by NodeJS
     "compilerOptions": {
       "module": "commonjs"
     }
