Update pipeline triggering config

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -3,10 +3,10 @@ name: Build and Test
 on:
   push:
     branches:
-      - '*'
+      - 'main'
   pull_request:
     branches:
-      - '*'
+      - 'main'
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron: '10 10 * * 5'  # every Friday at 10:10
