--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A4 landscape page poster project with TypeScript and Webpack",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode development --no-open",
+    "start": "webpack serve --mode development --no-open --port 8765",
     "build": "webpack --mode production",
     "test": "playwright test",
     "test:report": "playwright show-report"
