--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -56,6 +56,13 @@ jobs:
           name: test-results
           path: test-results/
           retention-days: 30
+      - name: Upload Snapshots
+        uses: actions/upload-artifact@v6
+        if: ${{ !cancelled() }}
+        with:
+          name: tests-snapshots
+          path: tests/screenshot.spec.ts-snapshots
+          retention-days: 30
       - name: Test Report
         uses: dorny/test-reporter@v2
         if: ${{ !cancelled() }}
